# OpenMC2

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_mingw.txt  OpenMC2.sln  OpenMC2.vcxproj  OpenMC2.vcxproj.filters  README.md  appveyor.yml  mc2.lib
Scripts/: Libs.vcxproj  libs.ps1
Stubs/: BinkStub.hpp  MssStub.hpp  Stub.cpp
Stubs/BinkStub/: BinkStub.vcxproj  BinkStub.vcxproj.filters  BinkSymbols.ipp
Stubs/MssStub/: MssStub.vcxproj  MssStub.vcxproj.filters  MssSymbols.ipp
src/: Addresses.hpp  Archive.cpp  Archive.hpp  CInit.cpp  CInit.hpp  CommandLine.cpp  CommandLine.hpp  Config.cpp  Config.hpp  FileHandler.cpp  FileHandler.hpp  Game.cpp  Game.hpp  Logging.cpp  Logging.hpp  Memory.cpp  Memory.hpp  OpenMC2.cpp  Settings.cpp  Settings.hpp  UnkStructures.hpp  mcGame.cpp  mcGame.hpp  mcGameState.cpp  mcGameState.hpp  mcLayerMgr.cpp  mcLayerMgr.hpp
src/Audio/: sndVoice.cpp  sndVoice.hpp
src/DllHooks/: BinkSymbols.hpp  DllHooks.cpp  DllHooks.hpp  MssSymbols.hpp
src/UnkObjects/: unk401FD0.cpp  unk401FD0.hpp  unk4020F0.cpp  unk4020F0.hpp  unk402560.cpp  unk402560.hpp  unk402800.cpp  unk402800.hpp  unk404B90.cpp  unk404B90.hpp  unk405630.cpp  unk405630.hpp  unk405C90.cpp  unk405C90.hpp  unk406950.cpp  unk406950.hpp  unk4094A0.cpp  unk4094A0.hpp  unk412280.cpp  unk412280.hpp  unk419D20.cpp  unk419D20.hpp  unk41FB40.hpp  unk421350.cpp  unk421350.hpp  unk467180.cpp  unk467180.hpp  unk4701A0.cpp  unk4701A0.hpp  unk477E80.cpp  unk477E80.hpp  unk4788D0.cpp  unk4788D0.hpp  unk47BEA0.cpp  unk47BEA0.hpp  unk47C830.cpp  unk47C830.hpp  unk47DFB0.cpp  unk47DFB0.hpp  (+102 more)
